fix: fix dark mode

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -55,7 +55,7 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  h2{
+  h1, h2 ,h3, h4, h5, p{
     color: white;
   }
   .page {
