--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,6 @@
+html {
+  height: 100%;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,7 +9,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #FCFCFC!important;
-
+  height: 100%;
 }
 
 code {
@@ -16,15 +19,19 @@ code {
 
 #root {
   background-color: #FCFCFC;
-  height: 100vh;
+  height: auto;
 }
 p {
   margin-bottom: 0!important;
 }
 
+
 @media (prefers-color-scheme: dark) {
   #root {
     background-color: #272727;
     color: white;
+  }
+  body {
+    background-color: #272727!important;
   }
 }
